objects/MGtransacaccion__c.object
<CustomObject>
    <fields>
        <fullName>MGFechaTransaccion__c</fullName>
        <label>MGFechaTransaccion</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MGTransaccionTipo__c</fullName>
        <label>MGTransaccionTipo</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Socio_ID__c</fullName>
        <label>MGSocioID</label>
        <referenceTo>MGSocios__c</referenceTo>
        <relationshipLabel>MGTransacciones</relationshipLabel>
        <relationshipName>MGTransacciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MGTransacaccion</label>
    <nameField>
        <label>MGtransacaccion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MGTransacciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>